--- a/IDCA.Client/App.xaml
+++ b/IDCA.Client/App.xaml
@@ -5,14 +5,13 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="View/Style/Font.xaml"/>
                 <ResourceDictionary Source="View/Style/Colors.xaml"/>
                 <ResourceDictionary Source="View/Style/Button.xaml"/>
                 <ResourceDictionary Source="View/Style/GridSplitter.xaml"/>
                 <ResourceDictionary Source="View/Style/DataGrid.xaml"/>
-                <ResourceDictionary Source="View/Style/MetroTheme.xaml"/>
+                <ResourceDictionary Source="View/Style/TabControl.xaml"/>
+                <ResourceDictionary Source="View/Style/Window.xaml"/>
                 <ResourceDictionary Source="View/Style/TableSettingContentPresenter.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
