--- a/IDCA.Client/View/AxisSettingWindow.xaml
+++ b/IDCA.Client/View/AxisSettingWindow.xaml
@@ -1,9 +1,8 @@
-﻿<mah:MetroWindow
+﻿<Window
         x:Class="IDCA.Client.View.AxisSettingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
         d:DataContext="{d:DesignInstance Type=viewmodel:AxisSettingViewModel}"
@@ -23,7 +22,7 @@
             <Style TargetType="TextBlock">
                 <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
             </Style>
-            <Style TargetType="CheckBox" BasedOn="{StaticResource MahApps.Styles.CheckBox}">
+            <Style TargetType="CheckBox">
                 <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                 <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
                 <Setter Property="Height" Value="25"/>
@@ -31,7 +30,7 @@
                 <Setter Property="VerticalAlignment" Value="Center"/>
                 <Setter Property="VerticalContentAlignment" Value="Center"/>
             </Style>
-            <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox}">
+            <Style TargetType="TextBox">
                 <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                 <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
                 <Setter Property="Height" Value="25"/>
@@ -92,13 +91,13 @@
                             <Setter Property="VerticalContentAlignment" Value="Center"/>
                             <Setter Property="Margin" Value="5"/>
                         </Style>
-                        <Style TargetType="mah:MultiSelectionComboBox" BasedOn="{StaticResource MahApps.Styles.MultiSelectionComboBox.Horizontal}">
+                        <!--<Style TargetType="mah:MultiSelectionComboBox" BasedOn="{StaticResource MahApps.Styles.MultiSelectionComboBox.Horizontal}">
                             <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                             <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
                             <Setter Property="VerticalAlignment" Value="Center"/>
                             <Setter Property="VerticalContentAlignment" Value="Center"/>
                             <Setter Property="Margin" Value="5"/>
-                        </Style>
+                        </Style>-->
                         <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox}">
                             <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                             <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
@@ -143,7 +142,7 @@
                               SelectedIndex="{Binding FactorSequenceSelectedIndex}"/>
 
                     <TextBlock Grid.Row="1" Grid.Column="0">Top/Bottom/NPS</TextBlock>
-                    <mah:MultiSelectionComboBox Grid.Row="1"
+                    <!--<mah:MultiSelectionComboBox Grid.Row="1"
                                                 Grid.Column="1"
                                                 BorderBrush="{x:Static SystemColors.ControlDarkBrush}"
                                                 mah:MultiSelectorHelper.SelectedItems="{Binding TopBottomBoxSelectedItems}"
@@ -154,7 +153,7 @@
                                                 VerticalScrollBarVisibility="Disabled"
                                                 HorizontalScrollBarVisibility="Hidden"
                                                 ScrollViewer.CanContentScroll="True"
-                                                />
+                                                />-->
 
                     <TextBlock Grid.Row="1" Grid.Column="2">NPS Top Box</TextBlock>
                     <TextBox Grid.Row="1" Grid.Column="3" Text="{Binding NpsTopBox}"/>
@@ -467,4 +466,4 @@
         </Grid>
         
     </Grid>
-</mah:MetroWindow>
+</Window>
