--- a/IDCA.Client/View/SettingWindow.xaml
+++ b/IDCA.Client/View/SettingWindow.xaml
@@ -1,9 +1,9 @@
-﻿<mah:MetroWindow
+﻿<Window
     x:Class="IDCA.Client.View.SettingWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:helper="clr-namespace:IDCA.Client.View.Helper"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
     d:DataContext="{d:DesignInstance Type=viewmodel:SettingWindowViewModel}"
@@ -11,7 +11,7 @@
     Title="全局配置" 
     FontFamily="{StaticResource IDCA.Font.Family}"
     Height="600"
-    Width="800"
+    Width="900"
     ResizeMode="NoResize"
     Background="{StaticResource IDCA.Brushes.Window.Background}">
     
@@ -25,14 +25,14 @@
                     <Setter Property="VerticalAlignment" Value="Center"/>
                     <Setter Property="HorizontalAlignment" Value="Left"/>
                 </Style>
-                <Style TargetType="CheckBox" BasedOn="{StaticResource MahApps.Styles.CheckBox}">
+                <Style TargetType="CheckBox">
                     <Setter Property="Margin" Value="5"/>
                     <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                     <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
                     <Setter Property="VerticalAlignment" Value="Center"/>
                     <Setter Property="VerticalContentAlignment" Value="Center"/>
                 </Style>
-                <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox}">
+                <Style TargetType="TextBox">
                     <Setter Property="Height" Value="23"/>
                     <Setter Property="Width" Value="120"/>
                     <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
@@ -41,7 +41,7 @@
                     <Setter Property="VerticalAlignment" Value="Center"/>
                     <Setter Property="VerticalContentAlignment" Value="Center"/>
                 </Style>
-                <Style TargetType="ComboBox" BasedOn="{StaticResource MahApps.Styles.ComboBox}">
+                <Style TargetType="ComboBox">
                     <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                     <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
                     <Setter Property="Width" Value="120"/>
@@ -51,16 +51,16 @@
                 </Style>
         </Grid.Resources>
                 
-        <mah:MetroAnimatedTabControl Margin="10"
-                                     Background="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"
-                                     BorderBrush="{StaticResource IDCA.Brushes.Window.BorderBrush}"
-                                     TabStripPlacement="Left"
-                                     mah:HeaderedControlHelper.HeaderFontSize="{StaticResource IDCA.Font.Size.Content}"
-                                     mah:HeaderedControlHelper.HeaderFontFamily="{StaticResource IDCA.Font.Family}"
-                                     mah:HeaderedControlHelper.HeaderMargin="10">
-            
-            <mah:MetroTabItem Header="模板" 
-                              Background="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}">
+        <TabControl Margin="10"
+                    Background="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"
+                    BorderBrush="{StaticResource IDCA.Brushes.Window.BorderBrush}"
+                    TabStripPlacement="Left"
+                    helper:HeaderedControlHelper.HeaderFontFamily="{StaticResource IDCA.Font.Family}"
+                    helper:HeaderedControlHelper.HeaderFontSize="{StaticResource IDCA.Font.Size.Content}"
+                    >
+
+            <TabItem Header="模板" 
+                     Background="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}">
                 <Grid>
                     
                     <Grid.RowDefinitions>
@@ -97,14 +97,13 @@
                                    Text="所有模板"/>
                         <DataGrid Grid.Row="1"
                                   Margin="10 0"
-                                  Style="{StaticResource IDCA.DataGrid.Base}"
                                   Background="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"
                                   ItemsSource="{Binding TemplateInfos}"
                                   d:ItemsSource="{d:SampleData ItemCount=5}"
                                   BorderThickness="0"
                                   IsReadOnly="True">
                             <DataGrid.Resources>
-                                <Style TargetType="DataGridColumnHeader" BasedOn="{StaticResource MahApps.Styles.DataGridColumnHeader}">
+                                <Style TargetType="DataGridColumnHeader">
                                     <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"/>
                                 </Style>
                             </DataGrid.Resources>
@@ -127,8 +126,8 @@
                     </Grid>
                     
                 </Grid>
-            </mah:MetroTabItem>
-            <mah:MetroTabItem Header="轴">
+            </TabItem>
+            <TabItem Header="轴">
                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -194,9 +193,9 @@
                     </Grid>
 
                 </ScrollViewer>
-            </mah:MetroTabItem>
+            </TabItem>
 
-            <mah:MetroTabItem Header="表格">
+            <TabItem Header="表格">
                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                     <Grid>
 
@@ -224,9 +223,9 @@
 
                     </Grid>
                 </ScrollViewer>
-            </mah:MetroTabItem>
+            </TabItem>
 
-            <mah:MetroTabItem Header="Excel读取">
+            <TabItem Header="Excel读取">
                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                     <Grid>
 
@@ -258,8 +257,8 @@
 
                     </Grid>
                 </ScrollViewer>
-            </mah:MetroTabItem>
+            </TabItem>
             
-        </mah:MetroAnimatedTabControl>
+        </TabControl>
     </Grid>
-</mah:MetroWindow>
+</Window>
