--- a/IDCA.Client/View/StartWindow.xaml
+++ b/IDCA.Client/View/StartWindow.xaml
@@ -1,15 +1,14 @@
-﻿<mah:MetroWindow
+﻿<Window
     x:Class="IDCA.Client.View.StartWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
     d:DataContext="{d:DesignInstance Type=viewmodel:StartWindowViewModel}"
     mc:Ignorable="d"
-    Height="600" 
-    Width="950"
+    Height="550" 
+    Width="900"
     Background="{StaticResource IDCA.Brushes.Window.Background}"
     TextElement.Foreground="Black"
     ResizeMode="CanMinimize"
@@ -62,7 +61,7 @@
                      SelectedIndex="{Binding TemplateSelectedIndex}"
                      d:ItemsSource="{d:SampleData ItemCount=5}">
                 <ListBox.Resources>
-                    <Style TargetType="ListBoxItem" BasedOn="{StaticResource MahApps.Styles.ListBoxItem}">
+                    <Style TargetType="ListBoxItem">
                         <Setter Property="Background" Value="Transparent"/>
                         <Setter Property="Margin" Value="5"/>
                     </Style>
@@ -105,13 +104,13 @@
                     <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                     <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.TextBlock.Label}"/>
                 </Style>
-                <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox}">
+                <Style TargetType="TextBox">
                     <Setter Property="Width" Value="340"/>
                     <Setter Property="Height" Value="30"/>
                     <Setter Property="FontSize" Value="13"/>
                     <Setter Property="VerticalContentAlignment" Value="Center"/>
                     <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                    <Setter Property="BorderBrush" Value="{StaticResource MahApps.Brushes.Button.Border}"/>
+                    <Setter Property="BorderBrush" Value="{StaticResource IDCA.Brushes.BorderBrush}"/>
                 </Style>
             </Grid.Resources>
 
@@ -178,4 +177,4 @@
 
         </Grid>
     </Grid>
-</mah:MetroWindow>
+</Window>
