--- a/IDCA.Client/View/Style/Button.xaml
+++ b/IDCA.Client/View/Style/Button.xaml
@@ -4,14 +4,13 @@
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Colors.xaml"/>
-        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
-    <Style x:Key="IDCA.Window.DialogButton" TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+    <Style x:Key="IDCA.Window.DialogButton" TargetType="Button">
         <Setter Property="Height" Value="30"/>
         <Setter Property="Width" Value="30"/>
         <Setter Property="Margin" Value="5"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource MahApps.Brushes.Button.Border}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource IDCA.Brushes.Window.BorderBrush}"/>
         <Setter Property="Background" Value="{DynamicResource IDCA.Brushes.Button.Background}"/>
         <Setter Property="VerticalContentAlignment" Value="Bottom"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
