--- a/IDCA.Client/View/Style/Colors.xaml
+++ b/IDCA.Client/View/Style/Colors.xaml
@@ -1,6 +1,28 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <Color x:Key="IDCA.Colors.Gray1">#FF333333</Color>
+    <Color x:Key="IDCA.Colors.Gray2">#FF7F7F7F</Color>
+    <Color x:Key="IDCA.Colors.Gray3">#FF9D9D9D</Color>
+    <Color x:Key="IDCA.Colors.Gray4">#FFA59F93</Color>
+    <Color x:Key="IDCA.Colors.Gray5">#FFB9B9B9</Color>
+    <Color x:Key="IDCA.Colors.Gray6">#FFCCCCCC</Color>
+    <Color x:Key="IDCA.Colors.Gray7">#FFD8D8D9</Color>
+    <Color x:Key="IDCA.Colors.Gray8">#FFE0E0E0</Color>
+    <Color x:Key="IDCA.Colors.Gray9">#5EC9C9C9</Color>
+    <Color x:Key="IDCA.Colors.Gray10">#FFF7F7F7</Color>
+
+    <Color x:Key="IDCA.Colors.Highlight">#FF00589F</Color>
+    <Color x:Key="IDCA.Colors.AccentBase">#FF0078D7</Color>
+    <Color x:Key="IDCA.Colors.Accent">#CC0078D7</Color>
+    <Color x:Key="IDCA.Colors.Accent2">#990078D7</Color>
+    <Color x:Key="IDCA.Colors.Accent3">#660078D7</Color>
+    <Color x:Key="IDCA.Colors.Accent4">#330078D7</Color>
+
+    <Color x:Key="IDCA.Colors.Background">#FFF3F3F3</Color>
+    <Color x:Key="IDCA.Colors.Foreground">Black</Color>
+    <Color x:Key="IDCA.Colors.BorderBrush">LightGray</Color>
+    
     <Color x:Key="IDCA.Colors.ListBox.Item.Dark">#FFF3F3F3</Color>
     <Color x:Key="IDCA.Colors.ListBox.Item.Selected.Background">#FF006CBE</Color>
     <Color x:Key="IDCA.Colors.ListBox.Item.Selected.Foreground">White</Color>
@@ -21,6 +43,29 @@
 
     <Color x:Key="IDCA.Colors.MultiSelection.Background">#FFF3F3F3</Color>
 
+
+    <SolidColorBrush x:Key="IDCA.Brushes.Gray1" Color="{StaticResource IDCA.Colors.Gray1}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Gray2" Color="{StaticResource IDCA.Colors.Gray2}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Gray3" Color="{StaticResource IDCA.Colors.Gray3}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Gray4" Color="{StaticResource IDCA.Colors.Gray4}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Gray5" Color="{StaticResource IDCA.Colors.Gray5}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Gray6" Color="{StaticResource IDCA.Colors.Gray6}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Gray7" Color="{StaticResource IDCA.Colors.Gray7}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Gray8" Color="{StaticResource IDCA.Colors.Gray8}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Gray9" Color="{StaticResource IDCA.Colors.Gray9}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Gray10" Color="{StaticResource IDCA.Colors.Gray10}"/>
+
+    <SolidColorBrush x:Key="IDCA.Brushes.Highlight" Color="{StaticResource IDCA.Colors.Highlight}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.AccentBase" Color="{StaticResource IDCA.Colors.AccentBase}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Accent" Color="{StaticResource IDCA.Colors.Accent}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Accent2" Color="{StaticResource IDCA.Colors.Accent2}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Accent3" Color="{StaticResource IDCA.Colors.Accent3}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Accent4" Color="{StaticResource IDCA.Colors.Accent4}"/>
+
+    <SolidColorBrush x:Key="IDCA.Brushes.Foreground" Color="{StaticResource IDCA.Colors.Foreground}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.Background" Color="{StaticResource IDCA.Colors.Background}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.BorderBrush" Color="{StaticResource IDCA.Colors.BorderBrush}"/>
+
     <SolidColorBrush x:Key="IDCA.Brushes.ListBox.Item.Dark" Color="{StaticResource IDCA.Colors.ListBox.Item.Dark}"/>
     <SolidColorBrush x:Key="IDCA.Brushes.ListBox.Item.Selected.Background" Color="{StaticResource IDCA.Colors.ListBox.Item.Selected.Background}"/>
     <SolidColorBrush x:Key="IDCA.Brushes.ListBox.Item.Selected.Foreground" Color="{StaticResource IDCA.Colors.ListBox.Item.Selected.Foreground}"/>
@@ -39,8 +84,24 @@
     <SolidColorBrush x:Key="IDCA.Brushes.Button.Background.Click" Color="{StaticResource IDCA.Colors.Button.Background.Click}"/>
     <SolidColorBrush x:Key="IDCA.Brushes.Button.Background.MouseOver" Color="{StaticResource IDCA.Colors.Button.Background.MouseOver}"/>
 
-    <SolidColorBrush x:Key="IDCA.Burshes.DataGrid.Separater" Color="{StaticResource IDCA.Colors.Window.Borderbrush}"/>
+     <SolidColorBrush x:Key="IDCA.Brushes.MultiSelection.Background" Color="{StaticResource IDCA.Colors.MultiSelection.Background}"/>
 
-    <SolidColorBrush x:Key="IDCA.Brushes.MultiSelection.Background" Color="{StaticResource IDCA.Colors.MultiSelection.Background}"/>
+    <SolidColorBrush x:Key="IDCA.Burshes.DataGrid.Separater" Color="{StaticResource IDCA.Colors.Window.Borderbrush}"/>
+    
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGridColumnHeader.Background.ReadOnly" Color="{StaticResource IDCA.Colors.Gray9}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGridColumnHeader.Background.MouseOver" Color="{StaticResource IDCA.Colors.Gray8}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGrid.Selection.Background" Color="{StaticResource IDCA.Colors.Accent}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGrid.Selection.Background.Disabled" Color="{StaticResource IDCA.Colors.Gray7}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGrid.Selection.Background.Inactive" Color="{StaticResource IDCA.Colors.Accent3}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGrid.Selection.Background.MouseOver" Color="{StaticResource IDCA.Colors.Accent2}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGrid.Selection.BorderBrush" Color="{ StaticResource IDCA.Colors.Accent}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGrid.Selection.BorderBrush.Disabled" Color="{StaticResource IDCA.Colors.Gray7}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGrid.Selection.BorderBrush.Focus" Color="{StaticResource IDCA.Colors.Accent}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGrid.Selection.BorderBrush.Inactive" Color="{StaticResource IDCA.Colors.Accent3}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGrid.Selection.BorderBrush.MouseOver" Color="{StaticResource IDCA.Colors.Accent2}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGrid.Selection.Text" Color="White"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGrid.Selection.Text.Disabled" Color="{StaticResource IDCA.Colors.Gray1}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGrid.Selection.Text.Inactive" Color="{StaticResource IDCA.Colors.Foreground}"/>
+    <SolidColorBrush x:Key="IDCA.Brushes.DataGrid.Selection.Text.MouseOver" Color="White"/>
 
 </ResourceDictionary>
