--- a/IDCA.Client/View/TableSettingWindow.xaml
+++ b/IDCA.Client/View/TableSettingWindow.xaml
@@ -1,10 +1,9 @@
-﻿<mah:MetroWindow
+﻿<Window
     x:Class="IDCA.Client.View.TableSettingWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
-    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:view="clr-namespace:IDCA.Client.View"
     xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
@@ -185,7 +184,7 @@
                           ItemsSource="{Binding Tree.Children}"
                           d:ItemsSource="{d:SampleData ItemCount=5}">
                     <TreeView.ItemContainerStyle>
-                        <Style TargetType="TreeViewItem" BasedOn="{StaticResource MahApps.Styles.TreeViewItem}">
+                        <Style TargetType="TreeViewItem">
                             <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                             <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"/>
                         </Style>
@@ -230,4 +229,4 @@
 
         </Grid>
     </Grid>
-</mah:MetroWindow>
+</Window>
