--- a/IDCA.Client/View/VariableSettingWindow.xaml
+++ b/IDCA.Client/View/VariableSettingWindow.xaml
@@ -1,17 +1,16 @@
-﻿<mah:MetroWindow x:Class="IDCA.Client.View.VariableSettingWindow"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
-                 d:DataContext="{d:DesignInstance Type=viewmodel:VariableSettingViewModel}"
-                 mc:Ignorable="d"
-                 Title="新建变量配置" 
-                 Height="800" 
-                 MinWidth="1200"
-                 ResizeMode="NoResize"
-                 Background="{StaticResource IDCA.Brushes.Window.Background}">
+﻿<Window x:Class="IDCA.Client.View.VariableSettingWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
+        d:DataContext="{d:DesignInstance Type=viewmodel:VariableSettingViewModel}"
+        mc:Ignorable="d"
+        Title="新建变量配置" 
+        Height="800" 
+        MinWidth="1200"
+        ResizeMode="NoResize"
+        Background="{StaticResource IDCA.Brushes.Window.Background}">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
@@ -554,4 +553,4 @@
         </Grid>
         
     </Grid>
-</mah:MetroWindow>
+</Window>
